<resources>
    <string name="app_name">EasyTo</string>
    <string name="app_name_easyto">EasyTo: Todo list</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
<!--    <string name="first_fragment_label">First Fragment</string>-->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="easyto">EasyTo</string>
    <string name="search_task">Buscar tarea</string>
    <string name="login_text">Inicio de sesión</string>
    <string name="enter_email">Ingrese su correo</string>
    <string name="email_text">Correo</string>
    <string name="password_text">Contraseña</string>
    <string name="enter_password">Ingrese su contraseña</string>
    <string name="iniciar">INICIAR</string>
    <string name="register">REGISTRARME</string>
    <string name="text_o">O</string>
    <string name="continue_google">Continuar con Google</string>
    <string name="hint_title_task">Título de la tarea</string>
    <string name="task_description">Descripción de la tarea</string>
    <string name="action_task_complete">Tareas completadas</string>
    <string name="action_tasks">Tareas sin completar</string>
    <string name="task_list_emty">No tienes tareas</string>
    <string name="no_text" />
    <string name="permission_denied">Debe aceptar los permisos</string>
    <string name="action_image">image</string>
    <string name="action_delete">delete</string>
    <string name="txt_quit">Quitar</string>
    <string name="txt_change">Cambiar</string>
    <string name="required_input">Ingrese el titulo de la tarea</string>
    <string name="save_success">Guardado</string>
    <string name="save_failure">No se pudo guardar</string>
    <string name="task_id">taskId</string>
    <string name="delete_success">Eliminado</string>
    <string name="delete_failure">No se pudo eliminar</string>
    <string name="update_success">Actualizado</string>
    <string name="update_failure">No se pudo actualizar</string>
    <string name="error_msg">Ocurrió un problema</string>
</resources>