<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/body_theme"
    android:paddingHorizontal="20dp"
    android:gravity="center_vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/dimen80dp"
            android:layout_height="@dimen/dimen80dp"
            android:src="@drawable/easyto_logo_256"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dimen10dp"
            style="@style/text_big"
            android:text="EasyTo"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/dimen25dp"
        android:layout_gravity="center"
        android:text="@string/login_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/dimen25dp"
        android:text="@string/email_text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_txt_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/dimen10dp"
        style="@style/input_rounded"
        android:hint="@string/enter_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/dimen25dp"
        android:text="@string/password_text"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_txt_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/dimen10dp"
        style="@style/input_rounded"
        android:hint="@string/enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="@dimen/dimen25dp"
        android:padding="@dimen/dimen14dp"
        app:elevation="0dp"
        android:text="@string/iniciar"
        app:cornerRadius="@dimen/dimen25dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray_text"
        android:padding="@dimen/dimen14dp"
        app:elevation="0dp"
        android:text="@string/register"
        app:cornerRadius="@dimen/dimen25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        style="@style/text_big"
        android:text="@string/text_o" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:padding="@dimen/dimen14dp"
        android:text="@string/continue_google"
        android:textColor="@color/black_text"
        app:icon="@drawable/google_icon"
        app:iconTint="none"
        app:elevation="0dp"
        app:cornerRadius="@dimen/dimen25dp" />

</androidx.appcompat.widget.LinearLayoutCompat>